# pair_hac

./: README.md  dump.rdb  pyproject.toml
mushiking/: db.sqlite3  dump.rdb  manage.py
mushiking/main/: views.py
mushiking/main/chat/: consumers.py
mushiking/mushiking/: asgi.py  settings.py  urls.py  wsgi.py
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
