[tool.poetry]
name = "hakkason"
version = "0.1.0"
description = ""
authors = ["reo03ARMS <reo03masu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.0"
channels = "^3.0.5"
redis = "^4.3.4"
channels-redis = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
